<resources>
    <string name="app_name">Alertify</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="status_code_sent">Verification Code Sent</string>
    <string name="status_verification_failed">Verification Code Failed, Please try again.</string>
    <string name="status_verification_succeeded">Hooray! Verification successful</string>
    <string name="instant_validation">Verified!</string>
    <string name="status_sign_in_failed">Sign in failed!</string>
    <string name="hint_verification_code">Enter verification code</string>
    <string name="welcome_text">Welcome to Alertify, together we\'re making our city better and safer</string>
    <string name="login_instruction">Enter your names and phone number to continue ...</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
<!--    <string name="email_hint">Your Email</string>-->
    <string name="phone_hint">Phone No. (in the format +254712345678)</string>
    <string name="register_btn">Sign Up</string>
    <string name="verify_button">Verify</string>
    <string name="resend_btn">Resend</string>
    <string name="tagUsers">Tag Contacts</string>
    <string name="action_tag_contact">Tag User</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="instruction">Press the button below to raise an alarm instantly.</string>
    <string name="alert_button">Raise Alarm</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="raise_alert">Raise Alert</string>
    <string name="tad_admin">Alert Admin</string>
    <string name="search_hint">Search user by name ...</string>
</resources>
